--- a/client/app/main.css
+++ b/client/app/main.css
@@ -768,7 +768,7 @@ input[type="button"] {
   margin: 0 !important;
   padding-top:0px !important;
   padding-bottom:0px !important;
-  z-index: 1111;
+  z-index: 999;
 }
 .dropdown-menu li {
   position: relative;
